fix: 从function中获取slot